--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+html {
+    background: red;
+}
 body {
+  background-color: #73a282;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
