--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -1,26 +1,10 @@
-html {
-    background: red;
+.modal-container {
+    display: flex;
+    justify-content: center;
+    height: 250px;
 }
-body {
-  background-color: #73a282;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
 .mymodal {
+  z-index: 10000;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -34,6 +18,10 @@ code {
   padding: 20px;
 }
 
+.modal-fact {
+    font-size: 1.2em;
+}
+
 .myoverlay {
   position: fixed;
   top: 0;
@@ -41,6 +29,21 @@ code {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.75);
+  z-index: 1000;
+}
+
+.modal-button {
+  bottom:0;
+  background: white;
+  font-size: 16px;
+  border-radius: 3px;
+  color: palevioletred;
+  border: 2px solid palevioletred;
+  margin: 0 2em;
+  padding: 0.25em 1em;
+  transition: 0.5s all ease-out;
+  width: 63%;
+  position: fixed;
 }
 
 .ReactModal__Overlay {
