--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -6,18 +6,31 @@
 .mymodal {
   z-index: 10000;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
   border: 1px solid #ccc;
   background: #fff;
   overflow: auto;
   border-radius: 4px;
   outline: none;
-  padding: 20px;
+  height: 100vh;
 }
 
+.modal-image {
+    width: 100%;
+}
+
+.modal-image img {
+    width: 100%;
+}
+
+.modal-info {
+    padding: 1em;
+}
+
+.modal-name {
+    font-size: 2em;
+    text-transform: uppercase;
+    margin-bottom: .5em;
+}
 .modal-fact {
     font-size: 1.2em;
 }
