modal image gradient glass effect

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -15,7 +15,27 @@
 }
 
 .modal-image {
-    width: 100%;
+  width: 100%;
+  background-image: linear-gradient(to right, #ebebeb calc(50% - 100px), #c5c5c5 50%, #ebebeb calc(50% + 100px));
+  background-size:0;
+  position:relative;
+  overflow:hidden;
+}
+.modal-image::before {
+  content:"";
+  position:absolute;
+  opacity: 20%;
+  top:0;
+  left:0;
+  width:calc(200% + 200px);
+  bottom:0;
+  background-image:inherit;
+  animation:move 3s linear infinite reverse; 
+}
+@keyframes move{
+  to {
+    transform:translateX(calc(-50% - 100px));
+  }
 }
 
 .modal-image img {
@@ -67,6 +87,7 @@
   opacity: 0.3;
   border: solid 2px white;
   border-radius: 19px;
+  z-index: 1000;
 }
 .modal-button:hover {
   opacity: 1;
