--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,23 @@
-html {
-    background: red;
-}
-body {
-  background-color: #73a282;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.orange {
+    color: #E55F13;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.green {
+    color: #647D1C;
 }
-.App {
-  font-family: sans-serif;
-  text-align: center;
+
+.yellow {
+    color: #E8AA24;
+}
+
+.black {
+    color: #1E1e1D;
+}
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .mymodal {
