--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -7,7 +7,6 @@
   z-index: 10000;
   position: fixed;
   border: 1px solid #ccc;
-  background: #fff;
   overflow: auto;
   border-radius: 4px;
   outline: none;
@@ -21,25 +20,31 @@
   background-size:0;
   position:relative;
   overflow:hidden;
+  border-bottom: solid 3px;
 }
 
 .modal-image img {
     width: 100%;
+    min-height: 50vh;
 }
 
 .modal-info {
-    padding: 1em;
+    padding: 1.5em;
+    background-color: #fef8f0;
+    padding-top: 0.9em;
 }
 
 .modal-name {
     font-family: 'BEYNO';
     font-size: 2em;
     text-transform: uppercase;
+    margin-top: .5em;
     margin-bottom: .5em;
 }
 .modal-fact {
     font-family: 'roboto';
-    font-size: 1.2em;
+    font-size: 1em;
+    line-height: 180%;
 }
 
 .myoverlay {
@@ -48,7 +53,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: #fef8f0;
   z-index: 1000;
 }
 .learn-more-button {
