--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -1,10 +1,10 @@
+
 .modal-container {
     display: flex;
     justify-content: center;
     height: 250px;
 }
 .mymodal {
-  z-index: 10000;
   position: fixed;
   border: 1px solid #ccc;
   overflow: auto;
@@ -54,7 +54,7 @@
   right: 0;
   bottom: 0;
   background-color: #fef8f0;
-  z-index: 1000;
+  z-index: 9999;
 }
 .learn-more-button {
   bottom:0;
@@ -96,7 +96,9 @@
 .modal-button:after {
   transform: rotate(-45deg);
 }
-
+.ReactModalPortal {
+    height: 100%;
+}
 .ReactModal__Overlay {
   opacity: 0;
   transition: opacity 500ms ease-in-out;
