--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -21,6 +21,7 @@
   position:relative;
   overflow:hidden;
   border-bottom: solid 3px;
+  transition: opacity 500ms ease-in-out;
 }
 
 .modal-image img {
@@ -56,19 +57,6 @@
   background-color: #fef8f0;
   z-index: 9999;
 }
-.learn-more-button {
-  bottom:0;
-  background: white;
-  font-size: 16px;
-  border-radius: 3px;
-  color: palevioletred;
-  border: 2px solid palevioletred;
-  margin: 0 2em;
-  padding: 0.25em 1em;
-  transition: 0.5s all ease-out;
-  width: 63%;
-  position: fixed;
-}
 
 .modal-button {
   position: absolute;
@@ -98,6 +86,7 @@
 }
 .ReactModalPortal {
     height: 100%;
+    transition: ease-out 500ms;
 }
 .ReactModal__Overlay {
   opacity: 0;
@@ -106,6 +95,7 @@
 
 .ReactModal__Overlay--after-open {
   opacity: 1;
+  transition: opacity 500ms ease-in-out;
 }
 
 .ReactModal__Overlay--before-close {
