--- a/src/index.css
+++ b/src/index.css
@@ -24,13 +24,30 @@ body {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-
   border: 1px solid #ccc;
   background: #fff;
   overflow: auto;
   border-radius: 4px;
   outline: none;
   padding: 20px;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-name: fadeOut;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+    -webkit-animation-duration: 3s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-name: fadeOut;
+    -webkit-animation-timing-function: ease-in;
+    -webkit-animation-fill-mode: forwards;;
+}
+
+@-webkit-keyframes fadeOut {
+   from { opacity: 1; }
+    to   { opacity: 0; }
+}
+@keyframes fadeOut {
+   from { opacity: 1; }
+    to   { opacity: 0; }
 }
 
