--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,17 @@
-
 .orange {
-    color: #E55F13;
+  color: #e55f13;
 }
 
 .green {
-    color: #647D1C;
+  color: #647d1c;
 }
 
 .yellow {
-    color: #E8AA24;
+  color: #e8aa24;
 }
 
 .black {
-    color: #1E1e1D;
+  color: #1e1e1d;
 }
 body {
   margin: 0;
@@ -30,24 +29,31 @@ body {
   border-radius: 4px;
   outline: none;
   padding: 20px;
-    animation-duration: 3s;
-    animation-iteration-count: 1;
-    animation-name: fadeOut;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-    -webkit-animation-duration: 3s;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-name: fadeOut;
-    -webkit-animation-timing-function: ease-in;
-    -webkit-animation-fill-mode: forwards;;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-name: fadeOut;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-name: fadeOut;
+  -webkit-animation-timing-function: ease-in;
+  -webkit-animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes fadeOut {
-   from { opacity: 1; }
-    to   { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 @keyframes fadeOut {
-   from { opacity: 1; }
-    to   { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
-
