--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -17,8 +17,9 @@
 }
 
 .modal-image {
+  position: relative;
   height: 50vh;
-  width: 100%;
+  max-width: 100vh;
   background-image: linear-gradient(
     to right,
     #ebebeb calc(50% - 100px),
@@ -26,7 +27,6 @@
     #ebebeb calc(50% + 100px)
   );
   background-size: 0;
-  position: relative;
   overflow: hidden;
   border-bottom: solid 3px;
   transition: opacity 500ms ease-in-out;
@@ -35,6 +35,7 @@
 .modal-image img {
   width: 100%;
   min-height: 50vh;
+  max-width: 66vh;
 }
 
 .modal-info {
@@ -106,13 +107,13 @@
 
 .ReactModal__Overlay--after-open {
   opacity: 1;
-  animation: fadeButton 1s;
+  animation: fade 1s;
 }
 
 .ReactModal__Overlay--before-close {
   opacity: 0;
 }
-@keyframes fadeButton {
+@keyframes fade {
   0% {
     opacity: 0;
   }
@@ -121,7 +122,7 @@
   }
   animation-timing-function: linear;
 }
-@-webkit-keyframes fadeButton {
+@-webkit-keyframes fade {
   0% {
     opacity: 0;
   }
