--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -131,3 +131,27 @@
   }
   -webkit-animation-timing-function: linear;
 }
+
+@media only screen and (min-device-width: 481px) {
+  .ReactModal__Overlay {
+    width: 60vh;
+    height: 80vh;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 4em;
+  }
+  .mymodal {
+    height: 80vh;
+    width: 60vh;
+  }
+  .modal-image {
+    min-height: 40vh;
+    width: 60vh;
+  }
+  .modal-image img {
+    width: 100%;
+    min-height: 50vh;
+    max-width: 100vh;
+  }
+}
