--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -20,6 +20,7 @@
   position: relative;
   height: 50vh;
   max-width: 100vh;
+  background-color: #292a2e;
   background-image: linear-gradient(
     to right,
     #ebebeb calc(50% - 100px),
@@ -33,7 +34,7 @@
 }
 
 .modal-image img {
-  /* width: 100%; */
+  width: 100%;
   min-height: 50vh;
   max-width: 66vh;
 }
