--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -117,13 +117,13 @@
     opacity: 0;
   }
   25% {
-    opacity: .25;
+    opacity: 0.25;
   }
   50% {
-    opacity: .5;
+    opacity: 0.5;
   }
   75% {
-    opacity: .75;
+    opacity: 0.75;
   }
   100% {
     opacity: 1;
